fix bug of mediacontrol vioce jump;media name in center of parent width; delete all parent div size css width height

--- a/resources/greeter/css/greeter.css
+++ b/resources/greeter/css/greeter.css
@@ -23,7 +23,7 @@ body{
     /*left:52%;*/
     left:32%;
     top:30%;
-    width:40%;
+    /*width:40%;*/
     
     display:-webkit-box;
     -webkit-box-pack:center;
@@ -36,7 +36,7 @@ body{
     position:absolute;
     bottom:50px;
     left:30px;
-    width:188px;
+    /*width:188px;*/
     
     display:-webkit-box;
     -webkit-box-pack:center;
@@ -49,7 +49,7 @@ body{
     position:absolute;
     bottom:40px;
     right:110px;
-    width:60px;
+    /*width:60px;*/
     /*height:60px;*/
     
     display:-webkit-box;
@@ -63,7 +63,7 @@ body{
     position:absolute;
     bottom:40px;
     right:30px;
-    width:60px;
+    /*width:60px;*/
     
     display:-webkit-box;
     -webkit-box-pack:center;
