--- a/resources/greeter/css/lock.css
+++ b/resources/greeter/css/lock.css
@@ -20,7 +20,7 @@ body{
     position:absolute;
     left:32%;
     top:30%;
-    width:40%;
+    /*width:40%;*/
     
     display:-webkit-box;
     -webkit-box-pack:center;
@@ -32,7 +32,7 @@ body{
     position:absolute;
     bottom:40px;
     left:30px;
-    width:250px;
+    /*width:250px;*/
     /*height:150px;*/
     
     display:-webkit-box;
@@ -45,7 +45,7 @@ body{
     position:absolute;
     bottom:40px;
     right:110px;
-    width:60px;
+    /*width:60px;*/
     /*height:60px;*/
     
     display:-webkit-box;
@@ -59,7 +59,7 @@ body{
     position:absolute;
     bottom:40px;
     right:30px;
-    width:60px;
+    /*width:60px;*/
     /*height:60px;*/
     
     display:-webkit-box;
@@ -75,7 +75,7 @@ body{
     position:absolute;
     bottom:30px;
     right:200px;
-    width:300px;
+    /*width:300px;*/
     /*height:150px;*/
     
     display:-webkit-box;
