--- a/resources/greeter/css/mediacontrol.css
+++ b/resources/greeter/css/mediacontrol.css
@@ -7,7 +7,8 @@
 }
 
 .name{
-    width:175px;
+    width:100%;
+    /*padding-left:20px;*/
     font-size:16px;
     color:#fff;
     text-align:center;
